// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props/open Implementation test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token keyword">
        import
      </span>
      <span class>
        React
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "react"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        DateInput
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/DateInput.mjs"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/theme.css"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/layout.css"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        OpenExample
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        [
      </span>
      <span class>
        value
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
        setValue
      </span>
      <span class="token punctuation">
        ]
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
        React
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class="token function">
        useState
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token string">
        ""
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        handleOnChange
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        event
      </span>
      <span class="token parameter punctuation">
        ,
      </span>
      <span class="token parameter">
        formatValue
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token function">
        setValue
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class>
        formatValue
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token tag punctuation">
        &lt;
      </span>
      <span class="token tag class-name">
        DateInput
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        name
      </span>
      <span class="token tag attr-value punctuation attr-equals">
        =
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag attr-value">
        field_name
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        onChange
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
        handleOnChange
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        open
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript boolean">
        true
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        value
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
        value
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag punctuation">
        /&gt;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        default
      </span>
      <span class>
        OpenExample
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Props/open No Value test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button data-testid="field_name-Tab-Day"
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
              aria-selected="true"
              disabled
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Year"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Year">
          <button data-testid="field_name-Calendar-Year-ButtonPrevious"
                  class="arrowButton previous"
                  type="button"
          >
            <span>
              View year options in 1990 - 2009
            </span>
          </button>
          <span data-testid="field_name-Calendar-Year-Range"
                class="dateRangeText"
          >
            2010 - 2029
          </span>
          <button data-testid="field_name-Calendar-Year-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View year options in 2030 - 2049
            </span>
          </button>
        </div>
      </div>
      <div class="viewBody Year"
           data-testid="field_name-ViewBody"
      >
        <button aria-label="2010"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2010"
                type="button"
        >
          2010
        </button>
        <button aria-label="2011"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2011"
                type="button"
        >
          2011
        </button>
        <button aria-label="2012"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2012"
                type="button"
        >
          2012
        </button>
        <button aria-label="2013"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2013"
                type="button"
        >
          2013
        </button>
        <button aria-label="2014"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2014"
                type="button"
        >
          2014
        </button>
        <button aria-label="2015"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2015"
                type="button"
        >
          2015
        </button>
        <button aria-label="2016"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2016"
                type="button"
        >
          2016
        </button>
        <button aria-label="2017"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2017"
                type="button"
        >
          2017
        </button>
        <button aria-label="2018"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2018"
                type="button"
        >
          2018
        </button>
        <button aria-label="2019"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2019"
                type="button"
        >
          2019
        </button>
        <button aria-label="2020"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2020"
                type="button"
        >
          2020
        </button>
        <button aria-label="2021"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2021"
                type="button"
        >
          2021
        </button>
        <button aria-label="2022"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2022"
                type="button"
        >
          2022
        </button>
        <button aria-label="2023"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2023"
                type="button"
                aria-current="date"
        >
          2023
        </button>
        <button aria-label="2024"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2024"
                type="button"
        >
          2024
        </button>
        <button aria-label="2025"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2025"
                type="button"
        >
          2025
        </button>
        <button aria-label="2026"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2026"
                type="button"
        >
          2026
        </button>
        <button aria-label="2027"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2027"
                type="button"
        >
          2027
        </button>
        <button aria-label="2028"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2028"
                type="button"
        >
          2028
        </button>
        <button aria-label="2029"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2029"
                type="button"
        >
          2029
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Props/open Value test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value="02/06/2023"
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button data-testid="field_name-Tab-Day"
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
              aria-selected="true"
              disabled
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Year"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Year">
          <button data-testid="field_name-Calendar-Year-ButtonPrevious"
                  class="arrowButton previous"
                  type="button"
          >
            <span>
              View year options in 1990 - 2009
            </span>
          </button>
          <span data-testid="field_name-Calendar-Year-Range"
                class="dateRangeText"
          >
            2010 - 2029
          </span>
          <button data-testid="field_name-Calendar-Year-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View year options in 2030 - 2049
            </span>
          </button>
        </div>
      </div>
      <div class="viewBody Year"
           data-testid="field_name-ViewBody"
      >
        <button aria-label="2010"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2010"
                type="button"
        >
          2010
        </button>
        <button aria-label="2011"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2011"
                type="button"
        >
          2011
        </button>
        <button aria-label="2012"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2012"
                type="button"
        >
          2012
        </button>
        <button aria-label="2013"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2013"
                type="button"
        >
          2013
        </button>
        <button aria-label="2014"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2014"
                type="button"
        >
          2014
        </button>
        <button aria-label="2015"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2015"
                type="button"
        >
          2015
        </button>
        <button aria-label="2016"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2016"
                type="button"
        >
          2016
        </button>
        <button aria-label="2017"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2017"
                type="button"
        >
          2017
        </button>
        <button aria-label="2018"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2018"
                type="button"
        >
          2018
        </button>
        <button aria-label="2019"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2019"
                type="button"
        >
          2019
        </button>
        <button aria-label="2020"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2020"
                type="button"
        >
          2020
        </button>
        <button aria-label="2021"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2021"
                type="button"
        >
          2021
        </button>
        <button aria-label="2022"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2022"
                type="button"
        >
          2022
        </button>
        <button aria-label="Selected 2023"
                class="dateOption Year selected"
                data-testid="field_name-Calendar-Year-2023"
                type="button"
                aria-current="date"
        >
          2023
        </button>
        <button aria-label="2024"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2024"
                type="button"
        >
          2024
        </button>
        <button aria-label="2025"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2025"
                type="button"
        >
          2025
        </button>
        <button aria-label="2026"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2026"
                type="button"
        >
          2026
        </button>
        <button aria-label="2027"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2027"
                type="button"
        >
          2027
        </button>
        <button aria-label="2028"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2028"
                type="button"
        >
          2028
        </button>
        <button aria-label="2029"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2029"
                type="button"
        >
          2029
        </button>
      </div>
    </div>
  </dialog>
</div>
`;
